# glping

./: .bumpversion.cfg  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  EVENTS.md  FIXES_SUMMARY.md  LAUNCHD_SETUP.md  LICENSE  Makefile  README.md  com.glping.daemon.plist  launchd_cleanup.sh  launchd_setup.sh  pyproject.toml  requirements.txt  run_cli.py  setup.py  test_working_dir.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SETUP_PAT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot.yml
glping/: __init__.py  __main__.py  async_gitlab_api.py  async_watcher.py  base_gitlab_api.py  base_watcher.py  cache.py  config.py  gitlab_api.py  lock.py  main.py  notifier.py  optimized_notifier.py  watcher.py
glping/utils/: __init__.py  date_utils.py  event_utils.py  url_utils.py
tests/: test_all_notifications.py  test_cache_critical.py  test_ci_cd_caching.py  test_ci_cd_events.py  test_ci_integration.py  test_ci_integration_simple.py  test_config_validation.py  test_cron_detection.py  test_gitlab_events.py  test_multiple_notifications.py  test_new_events.py  test_notification_click.py  test_notification_stacking.py  test_notifications.py  test_optimized_filtering.py  test_performance_comparison.py  test_pipeline_events.py  test_project_management_events.py  test_real_multiple_events.py  test_real_urls.py  test_url_comparison.py
